@@ -25,58 +25,6 @@
       },
       "develop" : {
          "requires" : {
-            "Dist::Zilla" : "5.020",
-            "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" : "0.003006",
-            "Dist::Zilla::Plugin::Authority" : "1.006",
-            "Dist::Zilla::Plugin::AutoPrereqs" : "5.020",
-            "Dist::Zilla::Plugin::Bootstrap::lib" : "1.001000",
-            "Dist::Zilla::Plugin::BumpVersionAfterRelease" : "0.003",
-            "Dist::Zilla::Plugin::CheckPrereqsIndexed" : "0.012",
-            "Dist::Zilla::Plugin::ConfirmRelease" : "5.020",
-            "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0.103510",
-            "Dist::Zilla::Plugin::EOLTests" : "0.02",
-            "Dist::Zilla::Plugin::Git::Check" : "2.024",
-            "Dist::Zilla::Plugin::Git::Commit" : "2.024",
-            "Dist::Zilla::Plugin::Git::CommitBuild" : "2.024",
-            "Dist::Zilla::Plugin::Git::Contributors" : "0.007",
-            "Dist::Zilla::Plugin::Git::GatherDir" : "2.024",
-            "Dist::Zilla::Plugin::Git::NextRelease" : "0.004000",
-            "Dist::Zilla::Plugin::Git::Tag" : "2.024",
-            "Dist::Zilla::Plugin::GithubMeta" : "0.46",
-            "Dist::Zilla::Plugin::License" : "5.020",
-            "Dist::Zilla::Plugin::MakeMaker" : "5.020",
-            "Dist::Zilla::Plugin::Manifest" : "5.020",
-            "Dist::Zilla::Plugin::ManifestSkip" : "5.020",
-            "Dist::Zilla::Plugin::MetaConfig" : "5.020",
-            "Dist::Zilla::Plugin::MetaData::BuiltWith" : "1.003001",
-            "Dist::Zilla::Plugin::MetaJSON" : "5.020",
-            "Dist::Zilla::Plugin::MetaProvides::Package" : "2.001002",
-            "Dist::Zilla::Plugin::MetaTests" : "5.020",
-            "Dist::Zilla::Plugin::MetaYAML" : "5.020",
-            "Dist::Zilla::Plugin::MinimumPerl" : "1.003",
-            "Dist::Zilla::Plugin::ModuleShareDirs" : "5.020",
-            "Dist::Zilla::Plugin::PodCoverageTests" : "5.020",
-            "Dist::Zilla::Plugin::PodSyntaxTests" : "5.020",
-            "Dist::Zilla::Plugin::PodWeaver" : "4.006",
-            "Dist::Zilla::Plugin::Prereqs" : "5.020",
-            "Dist::Zilla::Plugin::Prereqs::AuthorDeps" : "0.003",
-            "Dist::Zilla::Plugin::Prereqs::MatchInstalled::All" : "1.000000",
-            "Dist::Zilla::Plugin::Prereqs::Plugins" : "1.002001",
-            "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0.003001",
-            "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0.142470",
-            "Dist::Zilla::Plugin::ReadmeFromPod" : "0.21",
-            "Dist::Zilla::Plugin::RemovePhasedPrereqs" : "0.002",
-            "Dist::Zilla::Plugin::RewriteVersion::Sanitized" : "0.001004",
-            "Dist::Zilla::Plugin::RunExtraTests" : "0.022",
-            "Dist::Zilla::Plugin::Test::CPAN::Changes" : "0.008",
-            "Dist::Zilla::Plugin::Test::Compile::PerFile" : "0.003000",
-            "Dist::Zilla::Plugin::Test::Kwalitee" : "2.11",
-            "Dist::Zilla::Plugin::Test::MinimumVersion" : "2.000005",
-            "Dist::Zilla::Plugin::Test::Perl::Critic" : "2.112410",
-            "Dist::Zilla::Plugin::Test::ReportPrereqs" : "0.019",
-            "Dist::Zilla::Plugin::TestRelease" : "5.020",
-            "Dist::Zilla::Plugin::Twitter" : "0.026",
-            "Dist::Zilla::Plugin::UploadToCPAN" : "5.020",
             "Pod::Coverage::TrustPod" : "0.100003",
             "Test::CPAN::Changes" : "0.30",
             "Test::CPAN::Meta" : "0.23",
@@ -155,7 +103,6 @@
             "Dist::Zilla::Plugin::PodSyntaxTests" : "5.020",
             "Dist::Zilla::Plugin::PodWeaver" : "4.006",
             "Dist::Zilla::Plugin::Prereqs" : "5.020",
-            "Dist::Zilla::Plugin::Prereqs::Plugins" : "1.002001",
             "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0.003001",
             "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0.142470",
             "Dist::Zilla::Plugin::ReadmeFromPod" : "0.21",
@@ -283,7 +230,6 @@
          "Dist::Zilla::Plugin::AutoPrereqs" : "5.020",
          "Dist::Zilla::Plugin::Bootstrap::lib" : "1.001000",
          "Dist::Zilla::Plugin::BumpVersionAfterRelease" : "0.003",
-         "Dist::Zilla::Plugin::CheckPrereqsIndexed" : "0.012",
          "Dist::Zilla::Plugin::ConfirmRelease" : "5.020",
          "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0.103510",
          "Dist::Zilla::Plugin::EOLTests" : "0.02",
@@ -309,20 +255,15 @@
          "Dist::Zilla::Plugin::MinimumPerl" : "1.003",
          "Dist::Zilla::Plugin::ModuleBuild" : "5.020",
          "Dist::Zilla::Plugin::ModuleBuildTiny" : "0.007",
-         "Dist::Zilla::Plugin::ModuleShareDirs" : "5.020",
          "Dist::Zilla::Plugin::PerlTidy" : "0.17",
          "Dist::Zilla::Plugin::PodCoverageTests" : "5.020",
          "Dist::Zilla::Plugin::PodSyntaxTests" : "5.020",
          "Dist::Zilla::Plugin::PodWeaver" : "4.006",
          "Dist::Zilla::Plugin::Prereqs" : "5.020",
-         "Dist::Zilla::Plugin::Prereqs::AuthorDeps" : "0.003",
          "Dist::Zilla::Plugin::Prereqs::MatchInstalled" : "1.001002",
-         "Dist::Zilla::Plugin::Prereqs::MatchInstalled::All" : "1.000000",
-         "Dist::Zilla::Plugin::Prereqs::Plugins" : "1.002001",
          "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" : "0.003001",
          "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0.142470",
          "Dist::Zilla::Plugin::ReadmeFromPod" : "0.21",
-         "Dist::Zilla::Plugin::RemovePhasedPrereqs" : "0.002",
          "Dist::Zilla::Plugin::RewriteVersion::Sanitized" : "0.001004",
          "Dist::Zilla::Plugin::RunExtraTests" : "0.022",
          "Dist::Zilla::Plugin::Test::CPAN::Changes" : "0.008",
@@ -762,18 +703,6 @@
             "version" : "5.020"
          },
          {
-            "class" : "Dist::Zilla::Plugin::Prereqs::Plugins",
-            "config" : {
-               "Dist::Zilla::Plugin::Prereqs::Plugins" : {
-                  "exclude" : [],
-                  "phase" : "develop",
-                  "relation" : "requires"
-               }
-            },
-            "name" : "@Author::KENTNL/PluginAutoDeps",
-            "version" : "1.002001"
-         },
-         {
             "class" : "Dist::Zilla::Plugin::MinimumPerl",
             "name" : "@Author::KENTNL/MinimumPerl",
             "version" : "1.003"
@@ -1052,11 +981,6 @@
             },
             "name" : "Prereqs",
             "version" : "5.020"
-         },
-         {
-            "class" : "Dist::Zilla::Plugin::Prereqs::AuthorDeps",
-            "name" : "Prereqs::AuthorDeps",
-            "version" : "0.003"
          },
          {
             "class" : "Dist::Zilla::Plugin::RemovePhasedPrereqs",
