@@ -110,7 +110,6 @@ requires:
   Dist::Zilla::Plugin::PodSyntaxTests: '5.020'
   Dist::Zilla::Plugin::PodWeaver: '4.006'
   Dist::Zilla::Plugin::Prereqs: '5.020'
-  Dist::Zilla::Plugin::Prereqs::Plugins: '1.002001'
   Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.003001'
   Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.142470'
   Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
@@ -181,7 +180,6 @@ x_BuiltWith:
     Dist::Zilla::Plugin::AutoPrereqs: '5.020'
     Dist::Zilla::Plugin::Bootstrap::lib: '1.001000'
     Dist::Zilla::Plugin::BumpVersionAfterRelease: '0.003'
-    Dist::Zilla::Plugin::CheckPrereqsIndexed: '0.012'
     Dist::Zilla::Plugin::ConfirmRelease: '5.020'
     Dist::Zilla::Plugin::CopyFilesFromBuild: '0.103510'
     Dist::Zilla::Plugin::EOLTests: '0.02'
@@ -207,20 +205,15 @@ x_BuiltWith:
     Dist::Zilla::Plugin::MinimumPerl: '1.003'
     Dist::Zilla::Plugin::ModuleBuild: '5.020'
     Dist::Zilla::Plugin::ModuleBuildTiny: '0.007'
-    Dist::Zilla::Plugin::ModuleShareDirs: '5.020'
     Dist::Zilla::Plugin::PerlTidy: '0.17'
     Dist::Zilla::Plugin::PodCoverageTests: '5.020'
     Dist::Zilla::Plugin::PodSyntaxTests: '5.020'
     Dist::Zilla::Plugin::PodWeaver: '4.006'
     Dist::Zilla::Plugin::Prereqs: '5.020'
-    Dist::Zilla::Plugin::Prereqs::AuthorDeps: '0.003'
     Dist::Zilla::Plugin::Prereqs::MatchInstalled: '1.001002'
-    Dist::Zilla::Plugin::Prereqs::MatchInstalled::All: '1.000000'
-    Dist::Zilla::Plugin::Prereqs::Plugins: '1.002001'
     Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled: '0.003001'
     Dist::Zilla::Plugin::ReadmeAnyFromPod: '0.142470'
     Dist::Zilla::Plugin::ReadmeFromPod: '0.21'
-    Dist::Zilla::Plugin::RemovePhasedPrereqs: '0.002'
     Dist::Zilla::Plugin::RewriteVersion::Sanitized: '0.001004'
     Dist::Zilla::Plugin::RunExtraTests: '0.022'
     Dist::Zilla::Plugin::Test::CPAN::Changes: '0.008'
@@ -577,15 +570,6 @@ x_Dist_Zilla:
       name: '@Author::KENTNL/BundleDevelSuggests'
       version: '5.020'
     -
-      class: Dist::Zilla::Plugin::Prereqs::Plugins
-      config:
-        Dist::Zilla::Plugin::Prereqs::Plugins:
-          exclude: []
-          phase: develop
-          relation: requires
-      name: '@Author::KENTNL/PluginAutoDeps'
-      version: '1.002001'
-    -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: '@Author::KENTNL/MinimumPerl'
       version: '1.003'
@@ -797,10 +781,6 @@ x_Dist_Zilla:
           type: requires
       name: Prereqs
       version: '5.020'
-    -
-      class: Dist::Zilla::Plugin::Prereqs::AuthorDeps
-      name: Prereqs::AuthorDeps
-      version: '0.003'
     -
       class: Dist::Zilla::Plugin::RemovePhasedPrereqs
       config:
