@@ -60,7 +60,6 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::PodSyntaxTests" => "5.020",
     "Dist::Zilla::Plugin::PodWeaver" => "4.006",
     "Dist::Zilla::Plugin::Prereqs" => "5.020",
-    "Dist::Zilla::Plugin::Prereqs::Plugins" => "1.002001",
     "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" => "0.003001",
     "Dist::Zilla::Plugin::ReadmeAnyFromPod" => "0.142470",
     "Dist::Zilla::Plugin::ReadmeFromPod" => "0.21",
@@ -174,7 +173,6 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::PodWeaver" => "4.006",
   "Dist::Zilla::Plugin::Prereqs" => "5.020",
   "Dist::Zilla::Plugin::Prereqs::MatchInstalled" => 0,
-  "Dist::Zilla::Plugin::Prereqs::Plugins" => "1.002001",
   "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" => "0.003001",
   "Dist::Zilla::Plugin::ReadmeAnyFromPod" => "0.142470",
   "Dist::Zilla::Plugin::ReadmeFromPod" => "0.21",
