@@ -80,11 +80,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.020006
-
-[Prereqs::Plugins / @Author::KENTNL/PluginAutoDeps]
-:version = 1.002000
-phase = develop
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.020005
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -190,7 +186,6 @@ Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::Prereqs = 0
-Dist::Zilla::Plugin::Prereqs::Plugins = 1.002000
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
 Dist::Zilla::Plugin::ReadmeFromPod = 0
@@ -229,8 +224,6 @@ Test::Pod::Coverage = 1.08
 Test::EOL = 1.5
 namespace::autoclean = 0.15
 Test::Perl::Critic = 1.02
-
-[Prereqs::AuthorDeps]
 
 [RemovePhasedPrereqs]
 remove_runtime = Dist::Zilla::PluginBundle::Author::KENTNL
