@@ -1,6 +1,8 @@
 ﻿Revision history for Dist-Zilla-PluginBundle-Author-KENTNL
 
 2.021000 2014-10-03T07:07:37Z
+ [00 Minor]
+ - Inject modern Prereqs::Plugins to auto discover develop deps.
 
 2.020005 2014-10-03T07:04:22Z
  [Bugfix]
